trying to fix project theme in dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -282,6 +282,8 @@ footer.sticky-bottom {
   .grid-item {
     width: 250px;
     margin-bottom: 10px;
+    color: var(--global-text-color);
+    background-color: var(--global-bg-color);
     a {
       color: var(--global-text-color);
       background-color: var(--global-bg-color);
